data/derived/comb/progs/unify/prog4635.ml.out
Characters 76-77:
  | Sine e -> pi*.e
                  ^
Error: This expression has type expr but an expression was expected of type
         float
